# openapi/openapi.yaml
@@ -128,6 +128,154 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 
+  /records:
+    get:
+      operationId: GetRecordsByItem
+      parameters:
+        - name: itemId
+          in: query
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        200:
+          description: All records belonging to an item
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                    format: int32
+                  name:
+                    type: string
+                  records:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Record"
+        4XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        5XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    post:
+      operationId: CreateRecord
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                value:
+                  type: string
+                  minLength: 1
+              required:
+                - name
+                - value
+      responses:
+        201:
+          description: Newly created record
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Record"
+        4XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        5XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+  /records/{recordId}:
+    delete:
+      operationId: DeleteRecord
+      parameters:
+        - in: path
+          name: recordId
+          required: true
+          schema:
+            type: integer
+            format: int32
+      responses:
+        204:
+          description: Deleted record
+        4XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        5XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+    put:
+      operationId: UpdateRecord
+      parameters:
+        - in: path
+          name: recordId
+          required: true
+          schema:
+            type: integer
+            format: int32
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  minLength: 1
+                value:
+                  type: string
+                  minLength: 1
+              required:
+                - name
+                - value
+      responses:
+        200:
+          description: Updated record
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Record"
+        4XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        5XX:
+          description: Error
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+
+
 components:
   schemas:
     Error:
@@ -153,3 +301,17 @@ components:
         createdAt:
           type: string
 
+    Record:
+      type: object
+      required:
+        - id
+        - name
+        - value
+      properties:
+        id:
+          type: integer
+          format: int32
+        name:
+          type: string
+        value:
+          type: string
